test/lattests/bad/assignmentToRvalue.lat
int main() {
    42 = 42;
    return 0;
}